# Leave_Management_System

./: .gitignore  .pyre_configuration  README.md  run.md
.github/workflows/: ci.yml
backend/: .env.example  .pyre_configuration  README.md  firestore.indexes.json  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: dashboard.py  leaves.py  reports.py  staff.py  students.py
backend/app/core/: config.py
backend/app/dependencies/: auth.py
backend/app/services/: leaves.py  reports.py  users.py
backend/app/utils/: search.py  uploads.py
backend/leave_management_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: bootstrap_admin.py  delete_user.py
docs/: User_Guide.md
frontend/: README.md  file_list_to_convert.txt  package-lock.json  package.json
frontend/public/templates/: students_demo_bulk_upload.xlsx  students_template.csv  students_template.xlsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  sdk.ts  types.ts
frontend/src/components/: app-shell.tsx  confirmation-dialog.tsx  data-table.tsx  empty-state.tsx  loading-screen.tsx  panel-loader.tsx  protected-route.tsx  section-heading.tsx  stat-card.tsx  status-badge.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: firebase.ts  format.ts  navigation.ts
frontend/src/pages/: landing-page.tsx  login-page.tsx
frontend/src/pages/admin/: dashboard-page.tsx  leave-requests-page.tsx  reports-page.tsx  (+1 more)
frontend/src/types/: e2e.d.ts
scripts/: ci-validate.ps1
(+6 files in other folders)
